--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <artifactId>fr.imag.adele.cadse.parent</artifactId>
-    <groupId>fr.imag.adele.cadse</groupId>
-    <version>2.3.0-SNAPSHOT</version>
-    <relativePath>../fr.imag.adele.cadse.parent</relativePath>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>fr.imag.adele.cadse</groupId>
-  <artifactId>fr.imag.adele.cadse.parent.feature</artifactId>
-  <name>fr.imag.adele.cadse.parent.feature</name>
-  <version>2.3.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<artifactId>fr.imag.adele.cadse.parent</artifactId>
+		<groupId>fr.imag.adele.cadse</groupId>
+		<version>2.3.0-SNAPSHOT</version>
+		<relativePath>../fr.imag.adele.cadse.parent</relativePath>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.imag.adele.cadse</groupId>
+	<artifactId>fr.imag.adele.cadse.parent.feature</artifactId>
+	<name>fr.imag.adele.cadse.parent.feature</name>
+	<version>2.3.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>fr.imag.adele.maven</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>0.8-SNAPSHOT</version>
+				<extensions>true</extensions>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>update-site</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>fr.imag.adele.maven</groupId>
+						<artifactId>maven-eclipse-plugin</artifactId>
+						<version>0.8-SNAPSHOT</version>
+						<extensions>true</extensions>
+						<executions>
+							<execution>
+								<goals>
+									<goal>package-feature-source</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
