--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>fr.imag.adele.cadse.parent</artifactId>
-		<groupId>fr.imag.adele.cadse</groupId>
+		<groupId>fr.imag.adele.cadse.runtime</groupId>
 		<version>2.3.0-SNAPSHOT</version>
 		<relativePath>../fr.imag.adele.cadse.parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.imag.adele.cadse</groupId>
+	<groupId>fr.imag.adele.cadse.runtime</groupId>
 	<artifactId>fr.imag.adele.cadse.parent.feature</artifactId>
 	<name>fr.imag.adele.cadse.parent.feature</name>
 	<version>2.3.0-SNAPSHOT</version>
