--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>fr.imag.adele.cadse</groupId>
 	<artifactId>fr.imag.adele.cadse.parent.feature</artifactId>
 	<name>fr.imag.adele.cadse.parent.feature</name>
-	<version>2.3.1</version>
+	<version>2.3.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<build>
 		<plugins>
